src/schema/snapshots/schermz__schema__tests__merged_collapses_distinct_object_shapes.snap
---
source: src/schema/tests.rs
assertion_line: 113
expression: "Schema::from_json(&json, true, 30).to_json()"
---
{
  "info": {
    "types": [
      {
        "a": {
          "types": [
            "NUMBER"
          ],
          "values": [
            1
          ]
        },
        "b": {
          "optional": true,
          "types": [
            "NUMBER"
          ],
          "values": [
            2
          ]
        }
      }
    ]
  }
}
