src/schema/snapshots/schermz__schema__tests__merged_strings_collapse_min_max.snap
---
source: src/schema/tests.rs
assertion_line: 95
expression: "Schema::from_json(&json, true, 30).to_json()"
---
{
  "name": {
    "types": [
      "STRING(2, 4)"
    ],
    "values": [
      "ab",
      "abc",
      "abcd"
    ]
  }
}
