src/schema/snapshots/schermz__schema__tests__mixed_string_and_number_skips_values.snap
---
source: src/schema/tests.rs
assertion_line: 442
expression: "Schema::from_json(&json, false, 30).to_json()"
---
{
  "id": {
    "types": [
      "NUMBER",
      "STRING(1)"
    ]
  }
}
