src/schema/snapshots/schermz__schema__tests__nested_arrays_with_strings.snap
---
source: src/schema/tests.rs
assertion_line: 85
expression: "Schema::from_json(&json, false).to_json()"
---
{
  "matrix": {
    "types": [
      {
        "ARRAY": [
          {
            "ARRAY": [
              "STRING(1)",
              "STRING(2)"
            ]
          },
          {
            "ARRAY": [
              "STRING(3)"
            ]
          }
        ]
      }
    ]
  }
}
