src/schema/snapshots/schermz__schema__tests__nested_object_optional_uses_correct_denominator.snap
---
source: src/schema/tests.rs
assertion_line: 344
expression: "Schema::from_json(&json, true, 30).to_json()"
---
{
  "addr": {
    "optional": true,
    "types": [
      {
        "x": {
          "types": [
            "NUMBER"
          ],
          "values": [
            1
          ]
        },
        "y": {
          "optional": true,
          "types": [
            "NUMBER"
          ],
          "values": [
            2
          ]
        }
      }
    ]
  },
  "other": {
    "optional": true,
    "types": [
      "NUMBER"
    ],
    "values": [
      1
    ]
  }
}
