src/schema/snapshots/schermz__schema__tests__null_value_counts_as_present.snap
---
source: src/schema/tests.rs
assertion_line: 380
expression: "Schema::from_json(&json, false, 30).to_json()"
---
{
  "x": {
    "optional": true,
    "types": [
      "NUMBER",
      "NULL"
    ],
    "values": [
      1
    ]
  },
  "y": {
    "optional": true,
    "types": [
      "NUMBER"
    ],
    "values": [
      7
    ]
  }
}
