src/schema/snapshots/schermz__schema__tests__optional_top_level_key_in_array.snap
---
source: src/schema/tests.rs
assertion_line: 325
expression: "Schema::from_json(&json, false).to_json()"
---
{
  "a": {
    "types": [
      "NUMBER"
    ]
  },
  "b": {
    "optional": true,
    "types": [
      "NUMBER"
    ]
  }
}
