src/schema/snapshots/schermz__schema__tests__root_array_with_only_primitives_is_empty.snap
---
source: src/schema/tests.rs
assertion_line: 43
expression: "Schema::from_json(&json, false).to_json()"
---
{}
