src/schema/snapshots/schermz__schema__tests__same_shape_high_cardinality_id_drops_values_keeps_low_card.snap
---
source: src/schema/tests.rs
assertion_line: 770
expression: "Schema::from_json(&json, &default_config()).to_json()"
---
{
  "items": {
    "types": [
      {
        "ARRAY": [
          {
            "bucket": {
              "types": [
                "STRING(4, 5)"
              ],
              "values": [
                "alpha",
                "beta",
                "gamma"
              ]
            },
            "id": {
              "types": [
                "STRING(9)"
              ]
            }
          }
        ]
      }
    ]
  }
}
