src/schema/snapshots/schermz__schema__tests__same_shape_non_consecutive_merges_into_one_variant.snap
---
source: src/schema/tests.rs
assertion_line: 736
expression: "Schema::from_json(&json, &default_config()).to_json()"
---
{
  "items": {
    "types": [
      {
        "ARRAY": [
          {
            "id": {
              "types": [
                "STRING(2)"
              ],
              "values": [
                "a1",
                "a2",
                "a3"
              ]
            },
            "kind": {
              "discriminator": true,
              "types": [
                "STRING(1)"
              ],
              "values": [
                "x"
              ]
            }
          },
          {
            "extra": {
              "types": [
                "NUMBER"
              ],
              "values": [
                1,
                2
              ]
            },
            "id": {
              "types": [
                "STRING(2)"
              ],
              "values": [
                "b1",
                "b2"
              ]
            },
            "kind": {
              "discriminator": true,
              "types": [
                "STRING(1)"
              ],
              "values": [
                "y"
              ]
            }
          }
        ],
        "discriminator": "kind"
      }
    ]
  }
}
