src/schema/snapshots/schermz__schema__tests__same_shape_non_consecutive_unions_value_sets.snap
---
source: src/schema/tests.rs
assertion_line: 752
expression: "Schema::from_json(&json, &default_config()).to_json()"
---
{
  "items": {
    "types": [
      {
        "ARRAY": [
          {
            "id": {
              "types": [
                "STRING(1)"
              ],
              "values": [
                "a",
                "b",
                "c"
              ]
            },
            "n": {
              "types": [
                "NUMBER"
              ],
              "values": [
                1,
                2,
                3
              ]
            }
          },
          {
            "kind": {
              "types": [
                "STRING(15)"
              ],
              "values": [
                "different shape"
              ]
            }
          }
        ]
      }
    ]
  }
}
